<resources>
    <string name="app_name" translatable="false">Calculator-TD2</string>

    <!-- Main activity -->

    <string name="compute">Compute</string>
    <string name="previous">Previous</string>

    <!-- Compute activity -->

    <string name="addSymbol" translatable="false">+</string>
    <string name="subtractSymbol" translatable="false">-</string>
    <string name="multiplySymbol" translatable="false">*</string>
    <string name="divideSymbol" translatable="false">/</string>
    <string name="operation_template" translatable="false">%1$d %2$s %3$d</string>

    <!-- Result activity -->

    <string name="operations_count_label">Operations count : XX</string>
    <!--
                %1$ : la premiere variable passée par le code
                .0  : nombre de décimal affiché apres la virgule
                 f  : type double
     -->
    <string name="last_result_label">Last result : %1$.0f</string>
    <string name="divide_by_zero_impossible">Divide by zero impossible</string>
    <string name="operator_invalid">operator invalid</string>

    <!-- Submit menu  -->

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>