<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="184dp">

        <TextView
            android:id="@+id/operations_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operations_count_label" />

        <TextView
            android:id="@+id/last_result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_result_label"
            android:textColor="@color/green"
            android:visibility="gone" />

        <TextView
            android:id="@+id/divide_by_zero_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_by_zero_impossible"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/invalid_operator_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_invalid"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/result_previous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>